# pets

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/pets_api/: main.py  test_main.py
frontend/: package-lock.json  package.json
frontend/src/: breeds.json
frontend/src/app/: breed-picker.tsx  layout.tsx  navbar.tsx  page.tsx  theme-toggle.tsx
pets_api/: main.py
