[tool.poetry]
name = "pets-api"
version = "0.1.0"
description = ""
authors = ["Ted <ted_bennett@icloud.com>"]
readme = "README.md"
packages = [{include = "pets_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
black = "^23.3.0"
httpx = "^0.24.1"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "pets_api.main:start"
